--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <script src='ticTacToe.js'></script>
+    <script src='app.js'></script>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <div class='title'>
     <h1>Tic Tac Toe</h1>
+    <div/>
     <div id='board'>
       <!-- the `&nbsp;` in each div is a non-breakable space.
            It prevents the div from collapsing. -->
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
-      <div class='box'>&nbsp;</div>
+      <div id='A1' class='box'>&nbsp;</div>
+      <div id='A2' class='box'>&nbsp;</div>
+      <div id='A3' class='box'>&nbsp;</div>
+      <div id='B1' class='box'>&nbsp;</div>
+      <div id='B2' class='box'>&nbsp;</div>
+      <div id='B3' class='box'>&nbsp;</div>
+      <div id='C1' class='box'>&nbsp;</div>
+      <div id='C2' class='box'>&nbsp;</div>
+      <div id='C3' class='box'>&nbsp;</div>
     </div>
+
+    <button class="reset">Reset</button>
+    
   </body>
 </html>
