Update with styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src='app.js'></script>
     <link href="style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class='title'>
@@ -21,8 +22,6 @@
       <div id='C2' class='box'>&nbsp;</div>
       <div id='C3' class='box'>&nbsp;</div>
     </div>
-
-    <button class="reset">Reset</button>
-    
   </body>
+  <button class="reset">Reset</button>
 </html>
