Added turn tracker

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
       <div id='C3' class='box'>&nbsp;</div>
     </div>
   </body>
+  <div class= 'turn'>Go Player X!</div>
   <button class="reset">Reset</button>
 </html>
