Refactored with jQuery

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <script src='app.js'></script>
     <link href="style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script> 
+    <script src='tttrefactor.js'></script>   
   </head>
   <body>
     <div class='title'>
